# wordlistctl

./: .gitignore  Cargo.toml  Dockerfile  README.md  categories.json  config.json  repo.json  requirements.txt  urls.json  wordlistctl.1  wordlistctl.py
.github/workflows/: codacy.yml  rust.yml  super-linter.yml
bash-completion/: wordlistctl
config/: config.toml  repo.toml
man/: wordlistctl.1
src/: args.rs  commands.rs  data.rs  main.rs  repo.rs  units.rs
